--- a/scss/index.scss
+++ b/scss/index.scss
@@ -19,7 +19,7 @@ body {
     }
 
     &::-webkit-scrollbar-thumb {
-        background: linear-gradient( rgba(159, 223, 255, 0.0),#9fdfff);
+        background: linear-gradient( rgba(159, 223, 255, 0.0),#9fdfff,rgba(159, 223, 255, 0.0));
         border-radius: 5px;
     }
 
