--- a/sub/simmons/scss/mixin.scss
+++ b/sub/simmons/scss/mixin.scss
@@ -28,13 +28,29 @@
     }
 }
 
+@mixin title_border {
+    width: 100%;
+    border-left: 5px solid #371c69;
+    padding-left: 10px;
+
+    @include responsive(tablet-size) {
+        border-left: 6px solid #371c69;
+        padding-left: 13px;
+    }
+
+    @include responsive(pc-size) {
+        border-left: 8px solid #371c69;
+        padding-left: 18px;
+    }
+}
+
 @mixin title {
     font: {
         size: 2.3em;
         weight: 600;
     }
     letter-spacing: -0.08em;
-    color: $fonh;
+    color: #371c69;
 
     margin-bottom: 25px;
 
@@ -74,10 +90,30 @@
 
     @include responsive(pc-size) {
         font: {
-            size: 1.4em;
+            size: 1.8em;
         }
         line-height: 1.35em;
         margin-bottom: 40px;
+    }
+}
+
+@mixin color($color) {
+    width: 30%;
+    border-radius: 50%;
+    background-color: $color;
+
+    @include responsive(tablet-size) {
+        width: 20%;
+    }
+
+    @include responsive(pc-size) {
+        width: 15%;
+    }
+
+    &::after {
+        content: "";
+        display: block;
+        padding-bottom: 100%;
     }
 }
 
@@ -87,7 +123,7 @@
         weight: 600;
     }
     letter-spacing: -0.08em;
-    color: $fonh;
+    color: #371c69;
 
     margin-bottom: 10px;
 
