--- a/css/index.css
+++ b/css/index.css
@@ -83,6 +83,7 @@ body .star {
   height: 2px;
   background: rgba(255, 255, 255, 0);
   border-radius: 5px;
+  z-index: -5;
 }
 
 @-webkit-keyframes twinkle {
@@ -1297,7 +1298,7 @@ body main .skill .wrapper .big_img {
 @media screen and (min-width: 768px) {
   body main .skill .wrapper .big_img {
     position: absolute;
-    top: 50%;
+    top: 51.5%;
     left: 50%;
   }
 }
@@ -1642,6 +1643,21 @@ body main .popol {
   height: 100vh;
   padding-top: 10%;
   padding-bottom: 10%;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+body main .popol::-webkit-scrollbar {
+  width: 3px;
+}
+
+body main .popol::-webkit-scrollbar-thumb {
+  background: rgba(221, 0, 85, 0.5);
+  border-radius: 5px;
+}
+
+body main .popol::-webkit-scrollbar-track {
+  background: #371c69;
 }
 
 @media screen and (min-width: 768px) {
@@ -1660,9 +1676,9 @@ body main .popol .wrapper {
 body main .popol .wrapper .po_1, body main .popol .wrapper .po_2,
 body main .popol .wrapper .po_3, body main .popol .wrapper .po_4 {
   position: relative;
-  width: 170px;
+  width: 40%;
   margin: 0 auto;
-  margin-top: 30px;
+  margin-top: 6vh;
 }
 
 body main .popol .wrapper .po_1:first-child, body main .popol .wrapper .po_2:first-child,
@@ -1670,10 +1686,23 @@ body main .popol .wrapper .po_3:first-child, body main .popol .wrapper .po_4:fir
   margin-top: 0;
 }
 
+body main .popol .wrapper .po_1:last-child, body main .popol .wrapper .po_2:last-child,
+body main .popol .wrapper .po_3:last-child, body main .popol .wrapper .po_4:last-child {
+  margin-bottom: 6vh;
+}
+
+@media screen and (min-width: 768px) {
+  body main .popol .wrapper .po_1, body main .popol .wrapper .po_2,
+  body main .popol .wrapper .po_3, body main .popol .wrapper .po_4 {
+    width: 30%;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   body main .popol .wrapper .po_1, body main .popol .wrapper .po_2,
   body main .popol .wrapper .po_3, body main .popol .wrapper .po_4 {
-    width: 350px;
+    width: 24%;
+    max-width: 450px;
   }
 }
 
@@ -1830,8 +1859,10 @@ body main .etc {
   position: relative;
   width: 100%;
   height: 100vh;
+  margin: auto;
   background: url(../images/stone_mo.png) no-repeat center;
-  background-size: cover;
+  background-size: 85%;
+  max-width: 1920px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -1850,7 +1881,7 @@ body main .etc .wrapper {
 
 body main .etc .wrapper .stone_1 {
   position: absolute;
-  top: 12%;
+  top: 23%;
   left: 11%;
   width: 25%;
 }
@@ -1875,8 +1906,8 @@ body main .etc .wrapper .stone_1 {
 
 body main .etc .wrapper .stone_2 {
   position: absolute;
-  top: 17%;
-  left: 60%;
+  top: 21%;
+  left: 75%;
   width: 20%;
 }
 
@@ -1900,7 +1931,7 @@ body main .etc .wrapper .stone_2 {
 
 body main .etc .wrapper .stone_3 {
   position: absolute;
-  top: 32%;
+  top: 38%;
   left: 32%;
   width: 20%;
 }
@@ -1923,7 +1954,7 @@ body main .etc .wrapper .stone_3 {
 
 body main .etc .wrapper .stone_4 {
   position: absolute;
-  top: 38%;
+  top: 42%;
   left: 70%;
   width: 18%;
 }
@@ -1946,7 +1977,7 @@ body main .etc .wrapper .stone_4 {
 
 body main .etc .wrapper .stone_5 {
   position: absolute;
-  top: 52%;
+  top: 51%;
   left: 15%;
   width: 22%;
   -webkit-transform: rotate(-110deg);
@@ -1974,8 +2005,8 @@ body main .etc .wrapper .stone_5 {
 
 body main .etc .wrapper .stone_6 {
   position: absolute;
-  top: 63%;
-  left: 47%;
+  top: 60%;
+  left: 52%;
   width: 18%;
   -webkit-transform: rotate(-80deg);
           transform: rotate(-80deg);
@@ -2003,8 +2034,8 @@ body main .etc .wrapper .stone_6 {
 
 body main .etc .wrapper .stone_7 {
   position: absolute;
-  top: 72%;
-  left: 9%;
+  top: 68%;
+  left: 20%;
   width: 20%;
   -webkit-transform: rotate(80deg);
           transform: rotate(80deg);
@@ -2032,8 +2063,8 @@ body main .etc .wrapper .stone_7 {
 
 body main .etc .wrapper .stone_8 {
   position: absolute;
-  top: 80%;
-  left: 58%;
+  top: 72%;
+  left: 56%;
   width: 22%;
   -webkit-transform: rotate(-80deg);
           transform: rotate(-80deg);
