--- a/scss/index.scss
+++ b/scss/index.scss
@@ -34,6 +34,7 @@ body {
         height: 2px;
         background: rgba(255, 255, 255, 0);
         border-radius: 5px;
+        z-index: -5;
     }
 
     @keyframes twinkle {
@@ -872,7 +873,7 @@ body {
 
                     @include responsive(tablet-size){
                         position: absolute;
-                        top: 50%;
+                        top: 51.5%;
                         left: 50%;
                     }
 
@@ -906,6 +907,21 @@ body {
             height: 100vh;
             padding-top: 10%;
             padding-bottom: 10%;
+            overflow: scroll;
+            overflow-x: hidden;
+
+            &::-webkit-scrollbar {
+                width: 3px;
+            }
+        
+            &::-webkit-scrollbar-thumb {
+                background: rgba(221, 0, 85, 0.5);
+                border-radius: 5px;
+            }
+        
+            &::-webkit-scrollbar-track {
+                background: #371c69;
+            }
 
             @include responsive(tablet-size) {
                 position: relative;
@@ -917,16 +933,25 @@ body {
                 .po_1, .po_2,
                 .po_3, .po_4{
                     position: relative;
-                    width: 170px;
+                    width: 40%;
                     margin: 0 auto;
-                    margin-top: 30px;
+                    margin-top: 6vh;
 
                     &:first-child {
                         margin-top: 0;
                     }
 
+                    &:last-child {
+                        margin-bottom: 6vh;
+                    }
+
+                    @include responsive(tablet-size) {
+                        width: 30%;
+                    }
+
                     @include responsive(pc-size) {
-                        width: 350px;
+                        width: 24%;
+                        max-width: 450px;
                     }
 
                     &:hover {
@@ -1067,8 +1092,10 @@ body {
             position: relative;
             width: 100%;
             height: 100vh;
+            margin: auto;
             background: url(../images/stone_mo.png) no-repeat center;
-            background-size: cover;
+            background-size: 85%;
+            max-width: 1920px;
 
             @include responsive(pc-size) {
                 background: url(../images/stone_ba.png) no-repeat center;
@@ -1080,7 +1107,7 @@ body {
 
                 .stone_1 {
                     position: absolute;
-                    top: 12%;
+                    top: 23%;
                     left: 11%;
                     width: 25%;
 
@@ -1101,8 +1128,8 @@ body {
 
                 .stone_2 {
                     position: absolute;
-                    top: 17%;
-                    left: 60%;
+                    top: 21%;
+                    left: 75%;
                     width: 20%;
 
                     @include responsive(tablet-size) {
@@ -1122,7 +1149,7 @@ body {
 
                 .stone_3 {
                     position: absolute;
-                    top: 32%;
+                    top: 38%;
                     left: 32%;
                     width: 20%;
 
@@ -1141,7 +1168,7 @@ body {
 
                 .stone_4 {
                     position: absolute;
-                    top: 38%;
+                    top: 42%;
                     left: 70%;
                     width: 18%;
 
@@ -1160,7 +1187,7 @@ body {
 
                 .stone_5 {
                     position: absolute;
-                    top: 52%;
+                    top: 51%;
                     left: 15%;
                     width: 22%;
 
@@ -1184,8 +1211,8 @@ body {
 
                 .stone_6 {
                     position: absolute;
-                    top: 63%;
-                    left: 47%;
+                    top: 60%;
+                    left: 52%;
                     width: 18%;
 
                     transform: rotate(-80deg);
@@ -1209,8 +1236,8 @@ body {
 
                 .stone_7 {
                     position: absolute;
-                    top: 72%;
-                    left: 9%;
+                    top: 68%;
+                    left: 20%;
                     width: 20%;
 
                     transform: rotate(80deg);
@@ -1234,8 +1261,8 @@ body {
 
                 .stone_8 {
                     position: absolute;
-                    top: 80%;
-                    left: 58%;
+                    top: 72%;
+                    left: 56%;
                     width: 22%;
                     
                     transform: rotate(-80deg);
