--- a/css/index.css
+++ b/css/index.css
@@ -981,10 +981,10 @@ body main .skill .wrapper #sass {
 }
 
 body main .skill .wrapper #adobe {
-  margin-top: -37.5px;
-  margin-left: -37.5px;
-  height: 75px;
-  width: 75px;
+  margin-top: -32.5px;
+  margin-left: -32.5px;
+  height: 65px;
+  width: 65px;
   border-radius: 50%;
   -webkit-box-shadow: 0 0 34px #3a4385;
           box-shadow: 0 0 34px #3a4385;
@@ -992,28 +992,28 @@ body main .skill .wrapper #adobe {
 
 @media screen and (min-width: 768px) {
   body main .skill .wrapper #adobe {
-    margin-top: -20px;
-    margin-left: -20px;
     height: 40px;
     width: 40px;
+    margin-left: -20px;
+    margin-top: -20px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   body main .skill .wrapper #adobe {
-    width: 90px;
-    height: 90px;
-    margin-top: -45px;
-    margin-left: -45px;
+    width: 65px;
+    height: 65px;
+    margin-top: -32.5px;
+    margin-left: -32.5px;
   }
 }
 
 body main .skill .wrapper .adobe-orbit,
 body main .skill .wrapper .adobe-spin {
-  width: 200px;
-  height: 200px;
-  margin-left: -100px;
-  margin-top: -100px;
+  width: 150px;
+  height: 150px;
+  margin-left: -75px;
+  margin-top: -75px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1029,18 +1029,18 @@ body main .skill .wrapper .adobe-spin {
 @media screen and (min-width: 1024px) {
   body main .skill .wrapper .adobe-orbit,
   body main .skill .wrapper .adobe-spin {
-    width: 800px;
-    height: 800px;
-    margin-left: -400px;
-    margin-top: -400px;
+    width: 750px;
+    height: 750px;
+    margin-left: -375px;
+    margin-top: -375px;
   }
 }
 
 body main .skill .wrapper #html_css {
-  margin-top: -37.5px;
-  margin-left: -37.5px;
-  height: 75px;
-  width: 75px;
+  margin-top: -32.5px;
+  margin-left: -32.5px;
+  height: 65px;
+  width: 65px;
   border-radius: 50%;
   -webkit-box-shadow: 0 0 34px #3a4385;
           box-shadow: 0 0 34px #3a4385;
@@ -1048,19 +1048,19 @@ body main .skill .wrapper #html_css {
 
 @media screen and (min-width: 768px) {
   body main .skill .wrapper #html_css {
-    margin-top: -20px;
-    margin-left: -20px;
     height: 40px;
     width: 40px;
+    margin-left: -20px;
+    margin-top: -20px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   body main .skill .wrapper #html_css {
-    width: 90px;
-    height: 90px;
-    margin-top: -45px;
-    margin-left: -45px;
+    width: 65px;
+    height: 65px;
+    margin-top: -32.5px;
+    margin-left: -32.5px;
   }
 }
 
@@ -1070,6 +1070,10 @@ body main .skill .wrapper .html_css-spin {
   height: 450px;
   margin-left: -225px;
   margin-top: -225px;
+  width: 350px;
+  height: 350px;
+  margin-left: -175px;
+  margin-top: -175px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1077,26 +1081,26 @@ body main .skill .wrapper .html_css-spin {
   body main .skill .wrapper .html_css-spin {
     width: 450px;
     height: 450px;
-    margin-top: -225px;
     margin-left: -225px;
+    margin-top: -225px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   body main .skill .wrapper .html_css-orbit,
   body main .skill .wrapper .html_css-spin {
-    width: 1050px;
-    height: 1050px;
-    margin-top: -525px;
-    margin-left: -525px;
+    width: 900px;
+    height: 900px;
+    margin-left: -450px;
+    margin-top: -450px;
   }
 }
 
 body main .skill .wrapper #sass {
-  margin-top: -37.5px;
-  margin-left: -37.5px;
-  height: 75px;
-  width: 75px;
+  margin-top: -32.5px;
+  margin-left: -32.5px;
+  height: 65px;
+  width: 65px;
   border-radius: 50%;
   -webkit-box-shadow: 0 0 34px #3a4385;
           box-shadow: 0 0 34px #3a4385;
@@ -1113,19 +1117,19 @@ body main .skill .wrapper #sass {
 
 @media screen and (min-width: 1024px) {
   body main .skill .wrapper #sass {
-    width: 90px;
-    height: 90px;
-    margin-top: -45px;
-    margin-left: -45px;
+    width: 65px;
+    height: 65px;
+    margin-top: -32.5px;
+    margin-left: -32.5px;
   }
 }
 
 body main .skill .wrapper .sass-orbit,
 body main .skill .wrapper .sass-spin {
-  width: 750px;
-  height: 750px;
-  margin-left: -375px;
-  margin-top: -375px;
+  width: 500px;
+  height: 500px;
+  margin-left: -250px;
+  margin-top: -250px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1141,18 +1145,18 @@ body main .skill .wrapper .sass-spin {
 @media screen and (min-width: 1024px) {
   body main .skill .wrapper .sass-orbit,
   body main .skill .wrapper .sass-spin {
-    width: 1200px;
-    height: 1200px;
-    margin-top: -600px;
-    margin-left: -600px;
+    width: 1100px;
+    height: 1100px;
+    margin-left: -550px;
+    margin-top: -550px;
   }
 }
 
 body main .skill .wrapper #js {
-  margin-top: -37.5px;
-  margin-left: -37.5px;
-  height: 75px;
-  width: 75px;
+  margin-top: -32.5px;
+  margin-left: -32.5px;
+  height: 65px;
+  width: 65px;
   border-radius: 50%;
   -webkit-box-shadow: 0 0 34px #3a4385;
           box-shadow: 0 0 34px #3a4385;
@@ -1160,28 +1164,28 @@ body main .skill .wrapper #js {
 
 @media screen and (min-width: 768px) {
   body main .skill .wrapper #js {
-    margin-top: -20px;
-    margin-left: -20px;
     height: 40px;
     width: 40px;
+    margin-left: -20px;
+    margin-top: -20px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   body main .skill .wrapper #js {
-    width: 90px;
-    height: 90px;
-    margin-top: -45px;
-    margin-left: -45px;
+    width: 65px;
+    height: 65px;
+    margin-top: -32.5px;
+    margin-left: -32.5px;
   }
 }
 
 body main .skill .wrapper .js-orbit,
 body main .skill .wrapper .js-spin {
-  width: 1000px;
-  height: 1000px;
-  margin-left: -500px;
-  margin-top: -500px;
+  width: 700px;
+  height: 700px;
+  margin-left: -350px;
+  margin-top: -350px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1197,10 +1201,67 @@ body main .skill .wrapper .js-spin {
 @media screen and (min-width: 1024px) {
   body main .skill .wrapper .js-orbit,
   body main .skill .wrapper .js-spin {
-    width: 1500px;
-    height: 1500px;
-    margin-top: -750px;
-    margin-left: -750px;
+    width: 1250px;
+    height: 1250px;
+    margin-left: -625px;
+    margin-top: -625px;
+  }
+}
+
+body main .skill .wrapper #jq {
+  margin-top: -32.5px;
+  margin-left: -32.5px;
+  height: 65px;
+  width: 65px;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 34px #3a4385;
+          box-shadow: 0 0 34px #3a4385;
+}
+
+@media screen and (min-width: 768px) {
+  body main .skill .wrapper #jq {
+    height: 40px;
+    width: 40px;
+    margin-left: -20px;
+    margin-top: -20px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  body main .skill .wrapper #jq {
+    width: 65px;
+    height: 65px;
+    margin-top: -32.5px;
+    margin-left: -32.5px;
+  }
+}
+
+body main .skill .wrapper .jq-orbit,
+body main .skill .wrapper .jq-spin {
+  width: 850px;
+  height: 850px;
+  margin-left: -425px;
+  margin-top: -425px;
+}
+
+@media screen and (min-width: 768px) {
+  body main .skill .wrapper .jq-orbit,
+  body main .skill .wrapper .jq-spin {
+    width: 800px;
+    height: 800px;
+    margin-left: -400px;
+    margin-top: -400px;
+    border: none;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  body main .skill .wrapper .jq-orbit,
+  body main .skill .wrapper .jq-spin {
+    width: 1250px;
+    height: 1250px;
+    margin-left: -625px;
+    margin-top: -625px;
   }
 }
 
@@ -1240,6 +1301,28 @@ body main .skill .wrapper .js-spin {
   }
 }
 
+@-webkit-keyframes spin-right-e {
+  0% {
+    -webkit-transform: rotate(80deg);
+            transform: rotate(80deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin-right-e {
+  0% {
+    -webkit-transform: rotate(80deg);
+            transform: rotate(80deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
 body main .skill .wrapper .adobe-spin {
   -webkit-animation: spin-right-mo 15s linear infinite;
           animation: spin-right-mo 15s linear infinite;
@@ -1259,8 +1342,8 @@ body main .skill .wrapper .html_css-spin {
 
 @media screen and (min-width: 768px) {
   body main .skill .wrapper .html_css-spin {
-    -webkit-animation: spin-right 22s linear infinite;
-            animation: spin-right 22s linear infinite;
+    -webkit-animation: spin-right 18s linear infinite;
+            animation: spin-right 18s linear infinite;
   }
 }
 
@@ -1271,8 +1354,8 @@ body main .skill .wrapper .sass-spin {
 
 @media screen and (min-width: 768px) {
   body main .skill .wrapper .sass-spin {
-    -webkit-animation: spin-right 36.5s linear infinite;
-            animation: spin-right 36.5s linear infinite;
+    -webkit-animation: spin-right 10s linear infinite;
+            animation: spin-right 10s linear infinite;
   }
 }
 
@@ -1283,8 +1366,20 @@ body main .skill .wrapper .js-spin {
 
 @media screen and (min-width: 768px) {
   body main .skill .wrapper .js-spin {
-    -webkit-animation: spin-right 32s linear infinite;
-            animation: spin-right 32s linear infinite;
+    -webkit-animation: spin-right 20s linear infinite;
+            animation: spin-right 20s linear infinite;
+  }
+}
+
+body main .skill .wrapper .jq-spin {
+  -webkit-animation: spin-right-mo 10s linear infinite;
+          animation: spin-right-mo 10s linear infinite;
+}
+
+@media screen and (min-width: 768px) {
+  body main .skill .wrapper .jq-spin {
+    -webkit-animation: spin-right-e 15s linear infinite;
+            animation: spin-right-e 15s linear infinite;
   }
 }
 
@@ -1305,7 +1400,7 @@ body main .skill .wrapper .big_img {
 
 body main .skill .wrapper .big_img .adobe_big {
   position: absolute;
-  width: 200px;
+  width: 250px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1389,7 +1484,7 @@ body main .skill .wrapper .big_img .adobe_big p {
 body main .skill .wrapper .big_img .html_css_big {
   display: none;
   position: absolute;
-  width: 200px;
+  width: 250px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1473,7 +1568,7 @@ body main .skill .wrapper .big_img .html_css_big p {
 body main .skill .wrapper .big_img .sass_big {
   display: none;
   position: absolute;
-  width: 200px;
+  width: 250px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1557,7 +1652,7 @@ body main .skill .wrapper .big_img .sass_big p {
 body main .skill .wrapper .big_img .js_big {
   display: none;
   position: absolute;
-  width: 200px;
+  width: 250px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1702,7 +1797,7 @@ body main .popol .wrapper .po_3:last-child, body main .popol .wrapper .po_4:last
   body main .popol .wrapper .po_1, body main .popol .wrapper .po_2,
   body main .popol .wrapper .po_3, body main .popol .wrapper .po_4 {
     width: 24%;
-    max-width: 450px;
+    max-width: 350px;
   }
 }
 
@@ -1865,7 +1960,7 @@ body main .etc {
   max-width: 1920px;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   body main .etc {
     background: url(../images/stone_ba.png) no-repeat center;
     background-size: cover;
@@ -1879,18 +1974,75 @@ body main .etc .wrapper {
   margin: 0 auto;
 }
 
+body main .etc .wrapper [data-wrapper] {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: transparent;
+  width: 100%;
+  height: 0;
+  -webkit-transition: background .3s;
+  transition: background .3s;
+  overflow-x: hidden;
+  overflow-y: auto;
+  z-index: 9999;
+}
+
+body main .etc .wrapper [data-wrapper].active {
+  background: rgba(0, 0, 0, 0.5);
+  height: 100vh;
+  padding: 100px 0;
+}
+
+body main .etc .wrapper [data-wrapper] .modal-content {
+  margin: 0 auto;
+  background: #fff;
+  border-radius: 5px;
+  -webkit-box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.4);
+          box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.4);
+  padding: 20px;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translate(0, -50px);
+          transform: translate(0, -50px);
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+body main .etc .wrapper [data-wrapper].active .modal-content {
+  -webkit-transform: translate(0, 0px);
+          transform: translate(0, 0px);
+  opacity: 1;
+  visibility: visible;
+}
+
+body main .etc .wrapper [data-wrapper="modal-wrapper-medium"] .modal-content {
+  max-width: 250px;
+}
+
+@media screen and (min-width: 768px) {
+  body main .etc .wrapper [data-wrapper="modal-wrapper-medium"] .modal-content {
+    max-width: 700px;
+  }
+}
+
+body main .etc .wrapper [data-wrapper="modal-wrapper-medium"] .modal-content h2 {
+  margin: 0 0 15px 0;
+}
+
 body main .etc .wrapper .stone_1 {
   position: absolute;
   top: 23%;
   left: 11%;
-  width: 25%;
+  width: 28%;
+  max-width: 140px;
 }
 
 @media screen and (min-width: 768px) {
   body main .etc .wrapper .stone_1 {
     top: 15%;
     left: 7%;
-    width: 160px;
+    max-width: 180px;
     -webkit-transform: rotate(15deg);
             transform: rotate(15deg);
   }
@@ -1900,22 +2052,23 @@ body main .etc .wrapper .stone_1 {
   body main .etc .wrapper .stone_1 {
     top: 8%;
     left: 8%;
-    width: 10%;
+    max-width: 220px;
   }
 }
 
 body main .etc .wrapper .stone_2 {
   position: absolute;
-  top: 21%;
-  left: 75%;
-  width: 20%;
+  top: 26%;
+  left: 59%;
+  width: 23%;
+  max-width: 140px;
 }
 
 @media screen and (min-width: 768px) {
   body main .etc .wrapper .stone_2 {
     top: 22%;
     left: 75%;
-    width: 180px;
+    max-width: 180px;
     -webkit-transform: rotate(-20deg);
             transform: rotate(-20deg);
   }
@@ -1923,9 +2076,9 @@ body main .etc .wrapper .stone_2 {
 
 @media screen and (min-width: 1024px) {
   body main .etc .wrapper .stone_2 {
-    top: 3%;
+    top: 4%;
     left: 70%;
-    width: 9%;
+    max-width: 190px;
   }
 }
 
@@ -1933,45 +2086,47 @@ body main .etc .wrapper .stone_3 {
   position: absolute;
   top: 38%;
   left: 32%;
-  width: 20%;
+  width: 25%;
+  max-width: 140px;
 }
 
 @media screen and (min-width: 768px) {
   body main .etc .wrapper .stone_3 {
     top: 22%;
     left: 32%;
-    width: 170px;
+    max-width: 180px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   body main .etc .wrapper .stone_3 {
-    top: 27%;
-    left: 43%;
-    width: 10%;
+    top: 28%;
+    left: 41%;
+    max-width: 220px;
   }
 }
 
 body main .etc .wrapper .stone_4 {
   position: absolute;
-  top: 42%;
+  top: 40%;
   left: 70%;
-  width: 18%;
+  width: 25%;
+  max-width: 140px;
 }
 
 @media screen and (min-width: 768px) {
   body main .etc .wrapper .stone_4 {
     top: 46%;
     left: 75%;
-    width: 150px;
+    max-width: 180px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   body main .etc .wrapper .stone_4 {
     top: 38%;
-    left: 77%;
-    width: 9%;
+    left: 75%;
+    max-width: 200px;
   }
 }
 
@@ -1979,7 +2134,8 @@ body main .etc .wrapper .stone_5 {
   position: absolute;
   top: 51%;
   left: 15%;
-  width: 22%;
+  width: 26%;
+  max-width: 140px;
   -webkit-transform: rotate(-110deg);
           transform: rotate(-110deg);
 }
@@ -1988,7 +2144,7 @@ body main .etc .wrapper .stone_5 {
   body main .etc .wrapper .stone_5 {
     top: 52%;
     left: 15%;
-    width: 190px;
+    max-width: 180px;
     -webkit-transform: rotate(-120deg);
             transform: rotate(-120deg);
   }
@@ -1996,8 +2152,9 @@ body main .etc .wrapper .stone_5 {
 
 @media screen and (min-width: 1024px) {
   body main .etc .wrapper .stone_5 {
+    top: 46%;
     left: 3%;
-    width: 10%;
+    max-width: 220px;
     -webkit-transform: rotate(-100deg);
             transform: rotate(-100deg);
   }
@@ -2005,9 +2162,10 @@ body main .etc .wrapper .stone_5 {
 
 body main .etc .wrapper .stone_6 {
   position: absolute;
-  top: 60%;
-  left: 52%;
-  width: 18%;
+  top: 58%;
+  left: 48%;
+  width: 27%;
+  max-width: 140px;
   -webkit-transform: rotate(-80deg);
           transform: rotate(-80deg);
 }
@@ -2016,7 +2174,7 @@ body main .etc .wrapper .stone_6 {
   body main .etc .wrapper .stone_6 {
     top: 66%;
     left: 55%;
-    width: 150px;
+    max-width: 180px;
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
   }
@@ -2024,9 +2182,9 @@ body main .etc .wrapper .stone_6 {
 
 @media screen and (min-width: 1024px) {
   body main .etc .wrapper .stone_6 {
-    top: 68%;
+    top: 64%;
     left: 46%;
-    width: 9%;
+    max-width: 220px;
     -webkit-transform: rotate(-80deg);
             transform: rotate(-80deg);
   }
@@ -2034,9 +2192,10 @@ body main .etc .wrapper .stone_6 {
 
 body main .etc .wrapper .stone_7 {
   position: absolute;
-  top: 68%;
-  left: 20%;
-  width: 20%;
+  top: 67%;
+  left: 18%;
+  width: 28%;
+  max-width: 140px;
   -webkit-transform: rotate(80deg);
           transform: rotate(80deg);
 }
@@ -2045,7 +2204,7 @@ body main .etc .wrapper .stone_7 {
   body main .etc .wrapper .stone_7 {
     top: 82%;
     left: 8%;
-    width: 170px;
+    max-width: 180px;
     -webkit-transform: rotate(60deg);
             transform: rotate(60deg);
   }
@@ -2053,9 +2212,9 @@ body main .etc .wrapper .stone_7 {
 
 @media screen and (min-width: 1024px) {
   body main .etc .wrapper .stone_7 {
-    top: 80%;
+    top: 72%;
     left: 15%;
-    width: 9%;
+    max-width: 220px;
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
   }
@@ -2063,9 +2222,10 @@ body main .etc .wrapper .stone_7 {
 
 body main .etc .wrapper .stone_8 {
   position: absolute;
-  top: 72%;
+  top: 71%;
   left: 56%;
-  width: 22%;
+  width: 27%;
+  max-width: 140px;
   -webkit-transform: rotate(-80deg);
           transform: rotate(-80deg);
 }
@@ -2074,7 +2234,7 @@ body main .etc .wrapper .stone_8 {
   body main .etc .wrapper .stone_8 {
     top: 85%;
     left: 45%;
-    width: 190px;
+    max-width: 180px;
     -webkit-transform: rotate(150deg);
             transform: rotate(150deg);
   }
@@ -2084,7 +2244,7 @@ body main .etc .wrapper .stone_8 {
   body main .etc .wrapper .stone_8 {
     top: 78%;
     left: 76%;
-    width: 9%;
+    max-width: 220px;
     -webkit-transform: rotate(110deg);
             transform: rotate(110deg);
   }
