--- a/scss/index.scss
+++ b/scss/index.scss
@@ -651,69 +651,24 @@ body {
                 }
 
                 #adobe {
-                    margin-top: -37.5px;
-                    margin-left: -37.5px;
-                    height: 75px;
-                    width: 75px;
-                    border-radius: 50%;
-                    box-shadow: 0 0 34px #3a4385;
-
-                    @include responsive(tablet-size){
-                        margin-top: -20px;
-                        margin-left: -20px;
-                        height: 40px;
-                        width: 40px;
-                    }
-                    @include responsive(pc-size) {
-                        width: 90px;
-                        height: 90px;
-                        margin-top: -45px;
-                        margin-left: -45px;
-                    }
+                    @include skill_img;
                 }
 
                 .adobe-orbit,
                 .adobe-spin {
-                    width: 200px;
-                    height: 200px;
-                    margin-left: -100px;
-                    margin-top: -100px;
+                    @include skill_rotation(150px, -75px);
 
                     @include responsive(tablet-size){
-                        width: 350px;
-                        height: 350px;
-                        margin-left: -175px;
-                        margin-top: -175px;
+                        @include skill_rotation(350px, -175px);
                     }
 
                     @include responsive(pc-size) {
-                        width: 800px;
-                        height: 800px;
-                        margin-left: -400px;
-                        margin-top: -400px;
+                        @include skill_rotation(750px, -375px);
                     }
                 }
 
                 #html_css {
-                    margin-top: -37.5px;
-                    margin-left: -37.5px;
-                    height: 75px;
-                    width: 75px;
-                    border-radius: 50%;
-                    box-shadow: 0 0 34px #3a4385;
-
-                    @include responsive(tablet-size){
-                        margin-top: -20px;
-                        margin-left: -20px;
-                        height: 40px;
-                        width: 40px;
-                    }
-                    @include responsive(pc-size) {
-                        width: 90px;
-                        height: 90px;
-                        margin-top: -45px;
-                        margin-left: -45px;
-                    }
+                    @include skill_img;
                 }
                 .html_css-orbit,
                 .html_css-spin {
@@ -721,119 +676,86 @@ body {
                     height: 450px;
                     margin-left: -225px;
                     margin-top: -225px;
+                    @include skill_rotation(350px, -175px);
 
                     @include responsive(tablet-size){
-                        width: 450px;
-                        height: 450px;
-                        margin-top: -225px;
-                        margin-left: -225px;
+                        @include skill_rotation(450px, -225px);
                     }
+
                     @include responsive(pc-size) {
-                        width: 1050px;
-                        height: 1050px;
-                        margin-top: -525px;
-                        margin-left: -525px;
+                        @include skill_rotation(900px, -450px);
                     }
                 }
 
                 #sass {
-                    margin-top: -37.5px;
-                    margin-left: -37.5px;
-                    height: 75px;
-                    width: 75px;
-                    border-radius: 50%;
-                    box-shadow: 0 0 34px #3a4385;
-
-                    @include responsive(tablet-size){
-                        height: 40px;
-                        width: 40px;
-                        margin-left: -20px;
-                        margin-top: -20px;
-                    }
-                    @include responsive(pc-size) {
-                        width: 90px;
-                        height: 90px;
-                        margin-top: -45px;
-                        margin-left: -45px;
-                    }
+                    @include skill_img;
                 }
                 .sass-orbit,
                 .sass-spin {
-                    width: 750px;
-                    height: 750px;
-                    margin-left: -375px;
-                    margin-top: -375px;
+                    @include skill_rotation(500px, -250px);
 
                     @include responsive(tablet-size){
-                        width: 600px;
-                        height: 600px;
-                        margin-left: -300px;
-                        margin-top: -300px;
+                        @include skill_rotation(600px, -300px);
                     }
+
                     @include responsive(pc-size) {
-                        width: 1200px;
-                        height: 1200px;
-                        margin-top: -600px;
-                        margin-left: -600px;
+                        @include skill_rotation(1100px, -550px);
                     }
                 }
 
                 #js {
-                    margin-top: -37.5px;
-                    margin-left: -37.5px;
-                    height: 75px;
-                    width: 75px;
-                    border-radius: 50%;
-                    box-shadow: 0 0 34px #3a4385;
+                    @include skill_img;
+                }
+                .js-orbit,
+                .js-spin {
+                    @include skill_rotation(700px, -350px);
 
                     @include responsive(tablet-size){
-                        margin-top: -20px;
-                        margin-left: -20px;
-                        height: 40px;
-                        width: 40px;
+                        @include skill_rotation(800px, -400px);
                     }
                     @include responsive(pc-size) {
-                        width: 90px;
-                        height: 90px;
-                        margin-top: -45px;
-                        margin-left: -45px;
+                        @include skill_rotation(1250px, -625px);
                     }
                 }
 
-                .js-orbit,
-                .js-spin {
-                    width: 1000px;
-                    height: 1000px;
-                    margin-left: -500px;
-                    margin-top: -500px;
-
+                #jq {
+                    @include skill_img;
+                }
+                .jq-orbit,
+                .jq-spin {
+                    @include skill_rotation(850px, -425px);
+                    
                     @include responsive(tablet-size){
-                        width: 800px;
-                        height: 800px;
-                        margin-left: -400px;
-                        margin-top: -400px;
+                        @include skill_rotation(800px, -400px);
+                        border: none;
                     }
                     @include responsive(pc-size) {
-                        width: 1500px;
-                        height: 1500px;
-                        margin-top: -750px;
-                        margin-left: -750px;
+                        @include skill_rotation(1250px, -625px);
                     }
                 }
 
                 @keyframes spin-right {
                     100% {
-                    transform: rotate(360deg);
+                        transform: rotate(360deg);
                     }
                 }
 
                 @keyframes spin-right-mo {
                     50% {
-                    transform: rotate(-180deg);
+                        transform: rotate(-180deg);
                     }
                     100% {
                         transform: rotate(0deg);
-                        }
+                    }
+                }
+
+                @keyframes spin-right-e {
+                    0% {
+                        transform: rotate(80deg);
+                    }
+                    100% {
+                        transform: rotate(360deg);
+                    }
                 }
 
                 .adobe-spin {
@@ -847,21 +769,28 @@ body {
                     animation: spin-right-mo 10s linear infinite;
 
                     @include responsive(tablet-size){
-                        animation: spin-right 22s linear infinite;
+                        animation: spin-right 18s linear infinite;
                     }
                 }
                 .sass-spin {
                     animation: spin-right-mo 13s linear infinite;
 
                     @include responsive(tablet-size){
-                        animation: spin-right 36.5s linear infinite;
+                        animation: spin-right 10s linear infinite;
                     }
                 }
-                .js-spin {
+                .js-spin{
                     animation: spin-right-mo 12s linear infinite;
 
                     @include responsive(tablet-size){
-                        animation: spin-right 32s linear infinite;
+                        animation: spin-right 20s linear infinite;
+                    }
+                }
+                .jq-spin{
+                    animation: spin-right-mo 10s linear infinite;
+
+                    @include responsive(tablet-size){
+                        animation: spin-right-e 15s linear infinite;
                     }
                 }
 
@@ -951,7 +880,7 @@ body {
 
                     @include responsive(pc-size) {
                         width: 24%;
-                        max-width: 450px;
+                        max-width: 350px;
                     }
 
                     &:hover {
@@ -993,6 +922,7 @@ body {
                         opacity: 0;
 
                         transform: all 0.3s ease;
+
                         h3 {
                             font: {
                                 size: 1.1em;
@@ -1097,7 +1027,7 @@ body {
             background-size: 85%;
             max-width: 1920px;
 
-            @include responsive(pc-size) {
+            @include responsive(tablet-size) {
                 background: url(../images/stone_ba.png) no-repeat center;
                 background-size: cover;
             }
@@ -1105,16 +1035,67 @@ body {
             .wrapper {
                 @include wrapper;
 
+                [data-wrapper] {
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    background: transparent;
+                    width: 100%;
+                    height: 0;
+                    transition: background .3s;
+                    overflow-x: hidden;
+                    overflow-y: auto;
+                    z-index: 9999;
+                }
+
+                [data-wrapper].active {
+                    background: rgba(0, 0, 0, 0.5);
+                    height: 100vh;
+                    padding: 100px 0;
+                }
+
+                [data-wrapper] .modal-content { 
+                    margin: 0 auto;
+                    background: #fff;
+                    border-radius: 5px;
+                    box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.4);
+                    padding: 20px;
+                    opacity: 0;
+                    visibility: hidden;
+                    transform: translate(0, -50px);
+                    transition: .3s;
+                }
+
+                [data-wrapper].active .modal-content {
+                    transform: translate(0, 0px);
+                    opacity: 1;
+                    visibility: visible;
+                }
+
+
+                [data-wrapper="modal-wrapper-medium"] .modal-content {
+                    max-width: 250px;
+
+                    @include responsive(tablet-size) {
+                        max-width: 700px;
+                    }
+
+                    h2 {
+                        margin: 0 0 15px 0;
+                    }
+                }
+
                 .stone_1 {
                     position: absolute;
                     top: 23%;
                     left: 11%;
-                    width: 25%;
+                    width: 28%;
+                    max-width: 140px;
 
                     @include responsive(tablet-size) {
                         top: 15%;
                         left: 7%;
-                        width: 160px;
+                        max-width: 180px;
 
                         transform: rotate(15deg);
                     }
@@ -1122,28 +1103,29 @@ body {
                     @include responsive(pc-size) {
                         top: 8%;
                         left: 8%;
-                        width: 10%;
+                        max-width: 220px;
                     }
                 }
 
                 .stone_2 {
                     position: absolute;
-                    top: 21%;
-                    left: 75%;
-                    width: 20%;
+                    top: 26%;
+                    left: 59%;
+                    width: 23%;
+                    max-width: 140px;
 
                     @include responsive(tablet-size) {
                         top: 22%;
                         left: 75%;
-                        width: 180px;
+                        max-width: 180px;
 
                         transform: rotate(-20deg);
                     }
 
                     @include responsive(pc-size) {
-                        top: 3%;
+                        top: 4%;
                         left: 70%;
-                        width: 9%;
+                        max-width: 190px;
                     }
                 }
 
@@ -1151,37 +1133,39 @@ body {
                     position: absolute;
                     top: 38%;
                     left: 32%;
-                    width: 20%;
+                    width: 25%;
+                    max-width: 140px;
 
                     @include responsive(tablet-size) {
                         top: 22%;
                         left: 32%;
-                        width: 170px;
+                        max-width: 180px;
                     }
 
                     @include responsive(pc-size) {
-                        top: 27%;
-                        left: 43%;
-                        width: 10%;
+                        top: 28%;
+                        left: 41%;
+                        max-width: 220px;
                     }
                 }
 
                 .stone_4 {
                     position: absolute;
-                    top: 42%;
+                    top: 40%;
                     left: 70%;
-                    width: 18%;
+                    width: 25%;
+                    max-width: 140px;
 
                     @include responsive(tablet-size) {
                         top: 46%;
                         left: 75%;
-                        width: 150px;
+                        max-width: 180px;
                     }
 
                     @include responsive(pc-size) {
                         top: 38%;
-                        left: 77%;
-                        width: 9%;
+                        left: 75%;
+                        max-width: 200px;
                     }
                 }
 
@@ -1189,21 +1173,23 @@ body {
                     position: absolute;
                     top: 51%;
                     left: 15%;
-                    width: 22%;
+                    width: 26%;
+                    max-width: 140px;
 
                     transform: rotate(-110deg);
 
                     @include responsive(tablet-size) {
                         top: 52%;
                         left: 15%;
-                        width: 190px;
+                        max-width: 180px;
 
                         transform: rotate(-120deg);
                     }
 
                     @include responsive(pc-size) {
+                        top: 46%;
                         left: 3%;
-                        width: 10%;
+                        max-width: 220px;
 
                         transform: rotate(-100deg);
                     }
@@ -1211,24 +1197,25 @@ body {
 
                 .stone_6 {
                     position: absolute;
-                    top: 60%;
-                    left: 52%;
-                    width: 18%;
+                    top: 58%;
+                    left: 48%;
+                    width: 27%;
+                    max-width: 140px;
 
                     transform: rotate(-80deg);
 
                     @include responsive(tablet-size) {
                         top: 66%;
                         left: 55%;
-                        width: 150px;
+                        max-width: 180px;
 
                         transform: rotate(00deg);
                     }
 
                     @include responsive(pc-size) {
-                        top: 68%;
+                        top: 64%;
                         left: 46%;
-                        width: 9%;
+                        max-width: 220px;
 
                         transform: rotate(-80deg);
                     }
@@ -1236,24 +1223,25 @@ body {
 
                 .stone_7 {
                     position: absolute;
-                    top: 68%;
-                    left: 20%;
-                    width: 20%;
+                    top: 67%;
+                    left: 18%;
+                    width: 28%;
+                    max-width: 140px;
 
                     transform: rotate(80deg);
 
                     @include responsive(tablet-size) {
                         top: 82%;
                         left: 8%;
-                        width: 170px;
+                        max-width: 180px;
 
                         transform: rotate(60deg);
                     }
 
                     @include responsive(pc-size) {
-                        top: 80%;
+                        top: 72%;
                         left: 15%;
-                        width: 9%;
+                        max-width: 220px;
 
                         transform: rotate(0deg);
                     }
@@ -1261,16 +1249,17 @@ body {
 
                 .stone_8 {
                     position: absolute;
-                    top: 72%;
+                    top: 71%;
                     left: 56%;
-                    width: 22%;
-                    
+                    width: 27%;
+                    max-width: 140px;
+
                     transform: rotate(-80deg);
 
                     @include responsive(tablet-size) {
                         top: 85%;
                         left: 45%;
-                        width: 190px;
+                        max-width: 180px;
 
                         transform: rotate(150deg);
                     }
@@ -1278,7 +1267,7 @@ body {
                     @include responsive(pc-size) {
                         top: 78%;
                         left: 76%;
-                        width: 9%;
+                        max-width: 220px;
 
                         transform: rotate(110deg);
                     }
