--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,11 @@
 $font : 'NanumSquareRound';
 
+$container-size: 540px;
+$d1: 100px;
+$d2: 240px;
+$d3: 320px;
+$d4: 440px;
+
 $font-color : #fff8fc;
 
 $break-mobile: 320px;
